<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yerevan Rest</string>
    <string name="welcome">Welcome to</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fb_app_id">265928163581585</string>
    <string name="default_user_name">Welcome to Yerevan Rest!</string>
    <string name="default_rating">4.1</string>
    <string name="default_date">2 months ago</string>
    <string name="default_review">babsjdaskjdkajsdakjsdbkajsdbkjdbksdbksdbkjsbdksdbk</string>
    <string name="default_vote_count">15 votes</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="rating">Rating</string>
    
    
    <string name="select_mood">I am in a mood of ..</string>
    <string name="mood_sad">MELANCHOLY</string>
    <string name="mood_music">LISTENING TO MUSIC</string>
    <string name="mood_dancing">DANCING</string>
    <string name="mood_coffee">COFFEE</string>
    <string name="mood_food">EATING</string>
    
    <string name="rating_dialog_title">Leave your feedback!</string>
    <string name="rating_dialog_hint">Your review .. </string>
    <string name="rating_dialog_type_question">What would you do here?</string>
    <string name="item_type_dance">Dance</string>
    <string name="item_type_music">Listen to Music</string>
    <string name="item_type_sad">Drink beer</string>
    <string name="item_type_food">Eat</string>
    <string name="item_type_coffee">Drink coffee</string>
    <string name="done">Done</string>

</resources>
