<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grey" >
    
    <RatingBar 
		android:id="@+id/rating"
		style="?android:attr/ratingBarStyle"
		android:layout_marginTop="10dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:numStars="5"
		android:stepSize="1"/>
    
    <EditText 
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:hint="@string/rating_dialog_hint"/>
    
    <TextView 
        android:id="@+id/item_type_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:text="@string/rating_dialog_type_question"/>
    
    <RadioGroup 
        android:id="@+id/item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        
        <RadioButton 
            android:id="@+id/item_type_food"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/item_type_food"/>
        
        <RadioButton 
            android:id="@+id/item_type_dance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/item_type_dance"/>
        
        <RadioButton 
            android:id="@+id/item_type_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/item_type_coffee"/>
        
        <RadioButton 
            android:id="@+id/item_type_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/item_type_music"/>
        
        <RadioButton 
            android:id="@+id/item_type_sad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/item_type_sad"/>
        
    </RadioGroup>
    
    <Button 
        android:id="@+id/done"
        android:background="@drawable/mood_button_shape"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/done"/>
</LinearLayout>