<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_color"
    tools:context="com.restaurant.recommender.MainActivity$PlaceholderFragment" >

     <RelativeLayout 
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <com.facebook.widget.ProfilePictureView
	        android:id="@+id/profile_picture"
	        android:layout_alignParentLeft="true"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        facebook:preset_size="normal"/>
        
        <TextView 
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/profile_picture"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/default_user_name" />
        
        <TextView 
	        android:id="@+id/address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/profile_picture"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="5dp"
	        android:layout_below="@id/name"
	        android:textStyle="italic"
	        android:text="@string/default_user_name" />
        
        <com.facebook.widget.LoginButton
	        android:id="@+id/login_button"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="20dp"
	        android:layout_marginRight="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
        
    </RelativeLayout>
    
     <LinearLayout 
         android:id="@+id/content"
         android:orientation="vertical"
         android:gravity="center"
         android:layout_below="@id/header"
         android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
        
         <TextView 
             android:id="@+id/select_mood_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="18sp"
             android:text="@string/select_mood"/>
         
         <Button 
             android:id="@+id/mood_melancholy_button"
             android:background="@drawable/mood_button_shape"
             android:text="@string/mood_sad"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>

         <Button 
             android:id="@+id/mood_music_button"
             android:background="@drawable/mood_button_shape"
             android:text="@string/mood_music"
             android:layout_marginBottom="15dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>
         
		 <Button 
             android:id="@+id/mood_dance_button"
             android:background="@drawable/mood_button_shape"
             android:text="@string/mood_dancing"
             android:layout_marginBottom="15dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>
		 
		 <Button 
             android:id="@+id/mood_coffee_button"
             android:background="@drawable/mood_button_shape"
             android:text="@string/mood_coffee"
             android:layout_marginBottom="15dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>
		 
		 <Button 
             android:id="@+id/mood_food_button"
             android:background="@drawable/mood_button_shape"
             android:text="@string/mood_food"
             android:layout_marginBottom="15dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"/>
         
     </LinearLayout>

</RelativeLayout>
