<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/recommendation_item_shape"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
        <com.facebook.widget.ProfilePictureView
	        android:id="@+id/picture"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="10dp"
	        facebook:preset_size="small"/>
        
        <TextView 
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/picture"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="15sp"
	        android:textStyle="bold"
	        android:text="@string/default_user_name" />
        
        <TextView 
	        android:id="@+id/rating_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/picture"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="3dp"
	        android:layout_below="@id/name"
	        android:textStyle="italic"
	        android:textSize="12sp"
	        android:text="@string/rating" />
        
        <RatingBar 
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_toRightOf="@id/rating_text"
            android:layout_below="@id/name"
            android:layout_marginLeft="5dp"
	        android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:stepSize="1"/>
        
        <TextView 
            android:id="@+id/review_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating_text"
            android:layout_toRightOf="@id/picture"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:textStyle="italic"
	        android:textSize="12sp"
	        android:text="@string/default_date" />
        
        <TextView 
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/picture"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:text="@string/default_review"/>
        
</RelativeLayout> 