<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/recommendation_item_shape"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
        <com.facebook.widget.ProfilePictureView
	        android:id="@+id/picture"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="10dp"
	        facebook:preset_size="normal"/>
        
        <TextView 
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/picture"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:text="@string/default_user_name" />
        
        <TextView 
	        android:id="@+id/address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/picture"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="5dp"
	        android:layout_below="@id/name"
	        android:textStyle="italic"
	        android:textSize="15sp"
	        android:text="@string/default_user_name" />
        
        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/recommendation_rating_shape"
            android:textSize="19sp"
            android:text="@string/default_rating"/>
        
        <TextView 
	        android:id="@+id/rating_count"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/rating"
	        android:textStyle="italic"
	        android:textSize="12sp"
	        android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
	        android:text="@string/default_vote_count" />
        
</RelativeLayout> 